syntax = "proto3";

package base_service;

option go_package = "gen/proto/base_service";

import "google/protobuf/timestamp.proto";

message Category {
  int64 id = 1;
  string name = 2;
}

message Source {
  int64 id = 1;
  string name = 2;
}

message Incoming {
  int64 id = 1;
  int32 source_id = 2;
  string amount = 3;
  google.protobuf.Timestamp date = 4;
}

message Spend {
  int64 id = 1;
  int32 category_id = 2;
  string amount = 3;
  string description = 4;
  google.protobuf.Timestamp date = 5;
}

service TestService {
  rpc InsertCategory(Request.InsertCategory) returns (Response.InsertCategory) {}
  rpc GetCategory (Request.GetCategory) returns (Response.GetCategory) {}
  rpc UpdateCategory (Request.UpdateCategory) returns (Response.UpdateCategory) {}
  rpc DeleteCategory (Request.DeleteCategory) returns (Response.DeleteCategory) {}
  rpc InsertSource(Request.InsertSource) returns (Response.InsertSource) {}
  rpc GetSource (Request.GetSource) returns (Response.GetSource) {}
  rpc UpdateSource (Request.UpdateSource) returns (Response.UpdateSource) {}
  rpc DeleteSource (Request.DeleteSource) returns (Response.DeleteSource) {}
  rpc InsertIncome(Request.InsertIncome) returns (Response.InsertIncome) {}
  rpc GetIncome(Request.GetIncome) returns (Response.GetIncome) {}
  rpc UpdateIncome(Request.UpdateIncome) returns (Response.UpdateIncome) {}
  rpc DeleteIncome(Request.DeleteIncome) returns (Response.DeleteIncome) {}
  rpc InsertSpend(Request.InsertSpend) returns (Response.InsertSpend) {}
  rpc GetSpend(Request.GetSpend) returns (Response.GetSpend) {}
  rpc UpdateSpend(Request.UpdateSpend) returns (Response.UpdateSpend) {}
  rpc DeleteSpend(Request.DeleteSpend) returns (Response.DeleteSpend) {}
}

message Request {
  message InsertCategory {
    Category category = 1;
  }

  message GetCategory {
    int64 id = 1;
  }

  message UpdateCategory {
    Category category = 1;
  }

  message DeleteCategory {
    int64 id = 1;
  }

  message InsertSource {
    Source source = 1;
  }

  message GetSource {
    int64 id = 1;
  }

  message UpdateSource {
    Source source = 1;
  }

  message DeleteSource {
    int64 id = 1;
  }

  message InsertIncome {
    Incoming incoming = 1;
  }

  message GetIncome {
    int64 id = 1;
  }

  message UpdateIncome {
    Incoming incoming = 1;
  }

  message DeleteIncome {
    int64 id = 1;
  }

  message InsertSpend {
    Spend spend = 1;
  }

  message GetSpend {
    int64 id = 1;
  }

  message UpdateSpend {
    Spend spend = 1;
  }

  message DeleteSpend {
    int64 id = 1;
  }
}

message Response {
  message InsertIncome {
    string message = 1;
    int64 id = 2;
  }

  message GetIncome {
    string message = 1;
    Incoming incoming = 2;
  }

  message UpdateIncome {
    string message = 1;
    int64 id = 2;
  }

  message DeleteIncome {
    string message = 1;
    int64 id = 2;
  }

  message InsertSpend {
    string message = 1;
    int64 id = 2;
  }

  message GetSpend {
    string message = 1;
    Spend spend = 2;
  }

  message UpdateSpend {
    string message = 1;
    int64 id = 2;
  }

  message DeleteSpend {
    string message = 1;
    int64 id = 2;
  }

  message InsertCategory {
    string message = 1;
    int64 id = 2;
  }

  message GetCategory {
    string message = 1;
    Category category = 2;
  }

  message UpdateCategory {
    string message = 1;
    int64 id = 2;
  }

  message DeleteCategory {
    string message = 1;
    int64 id = 2;
  }

  message InsertSource {
    string message = 1;
    int64 id = 2;
  }

  message GetSource {
    string message = 1;
    Source source = 2;
  }

  message UpdateSource {
    string message = 1;
    int64 id = 2;
  }

  message DeleteSource {
    string message = 1;
    int64 id = 2;
  }
}